--- a/area_measure_class_method/.project
+++ b/area_measure_class_method/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>area_measure_classe</name>
+	<name>area_measure_class_method</name>
 	<comment></comment>
 	<projects>
 	</projects>
